@@ -23,7 +23,7 @@ if ( !defined( 'ABSPATH' ) ) {
 	exit;
 }
 
-require_once( GROUPS_CORE_LIB . '/interface-i-capable.php' );
+require_once GROUPS_CORE_LIB . '/interface-i-capable.php';
 
 /**
  * Group OPM.
