@@ -3,6 +3,7 @@
 = 2.8.0 =
 * Added the Groups Members block: A block whose content is only visible for members of selected groups.
 * Added the Groups Non-Members block: a block whose content is hidden for members of chosen groups.
+* Removed use of parenthesis with require_once and include_once.
 
 = 2.7.2 =
 * Fixes an issue with page builders and front-end editing.
